--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.3.0",
+    "@react-email/button": "0.0.9",
+    "@react-email/html": "0.0.4",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -16,10 +19,20 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "1.9.4",
+    "react-icons": "^4.9.0",
+    "react-player": "^2.12.0",
+    "react-simple-typewriter": "^5.0.1",
+    "recoil": "^0.7.7",
+    "swiper": "^9.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.8"
   }
 }
